# haskell-qre

./: .gitignore  CHANGELOG.md  LICENSE  haskell-qre.cabal  qrfactory.cabal
app/: Cmd.hs  Main.hs
src/: Assembler.hs  QRE.hs  Wifi.hs
src/QRE/: Assembler.hs  CLI.hs
src/QRE/Data/: Network.hs
