cabal-version:      2.4
name:               haskell-qre
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:
  Quick Response Encoder -- Application for generating QR Codes

-- A longer description of the package.
-- description: CLI command : QRE authnet
generating Wifi-access

-- A URL where users can report bugs.
-- bug-reports:
author:             Ryan de Kleer
maintainer:         thinking.as.a.hobby@gmail.com
copyright:          Copyright (c) 2023 Ryan de Kleer
license:            MIT
category:           qr, cli-tool, application
extra-source-files: CHANGELOG.md

common common-settings
  default-language: Haskell2010
  build-depends:
    , base                  >=4.8.2.0 && <5
    , bytestring
    , case-insensitive
    , hformat
    , JuicyPixels
    , optparse-applicative
    , qrcode-core
    , qrcode-juicypixels
    , string-interpolate
    , vector

  ghc-options:      -Wall

executable qre
  import:         common-settings
  build-depends:  haskell-qre
  hs-source-dirs: app
  main-is:        Main.hs

-- other-modules:
-- LANGUAGE extensions used by modules in this package.
-- other-extensions:
library
  import:          common-settings
  hs-source-dirs:  src
  exposed-modules:
    QRE
    QRE.Assembler
    QRE.CLI
    QRE.Data.Network
